--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -34,15 +34,15 @@
                 <div class="form-inline">
 
                     <div class="form-group">
-                        <label for="minMaxGuestRating">Guest Rating:</label>
+                        <label for="maxGuestRating">Guest Rating:</label>
 
-                        <input class="form-control" name="minMaxGuestRating" type="number" min="1" max="5" value={{data.minMaxGuestRating}}>
+                        <input class="form-control" name="maxGuestRating" type="number" min="1" max="5" value={{data.maxGuestRating}}>
                     </div>
 
                     <div class="form-group">
-                        <label for="minMaxTotalRate">Total Rating:</label>
+                        <label for="maxTotalRate">Total Rating:</label>
 
-                        <input class="form-control" name="minMaxTotalRate" type="number" min="1" max="5" value={{data.minMaxTotalRate}}>
+                        <input class="form-control" name="maxTotalRate" type="number" min="1" max="5" value={{data.maxTotalRate}}>
                     </div>
                 </div>
             </div>
