--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -40,9 +40,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="maxTotalRate">Total Rating:</label>
+                        <label for="maxStarRating">Max Start Rating:</label>
 
-                        <input class="form-control" name="maxTotalRate" type="number" min="1" max="5" value={{data.maxTotalRate}}>
+                        <input class="form-control" name="maxStarRating" type="number" min="1" max="5" value={{data.maxStarRating}}>
                     </div>
                 </div>
             </div>
