--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -33,16 +33,16 @@
 
                 <div class="form-inline">
 
-                    <div class="form-group">
+                    <div class="form-group number">
                         <label for="maxGuestRating">Guest Rating:</label>
 
-                        <input class="form-control" name="maxGuestRating" type="number" min="1" max="5" value={{data.maxGuestRating}}>
+                        <input class="form-control" name="maxGuestRating" type="number" min="1" max="4" value={{data.maxGuestRating}}>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group number">
                         <label for="maxStarRating">Max Start Rating:</label>
 
-                        <input class="form-control" name="maxStarRating" type="number" min="1" max="5" value={{data.maxStarRating}}>
+                        <input class="form-control" name="maxStarRating" type="number" min="1" max="4" value={{data.maxStarRating}}>
                     </div>
                 </div>
 
