--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -36,13 +36,13 @@
                     <div class="form-group number">
                         <label for="maxGuestRating">Guest Rating:</label>
 
-                        <input class="form-control" name="maxGuestRating" type="number" value={{data.maxGuestRating}}>
+                        <input class="form-control" name="maxGuestRating" type="number" min="1"  value={{data.maxGuestRating}}>
                     </div>
 
                     <div class="form-group number">
-                        <label for="maxStarRating">Max Start Rating:</label>
+                        <label for="maxStarRating">Max Star Rating:</label>
 
-                        <input class="form-control" name="maxStarRating" type="number"  value={{data.maxStarRating}}>
+                        <input class="form-control" name="maxStarRating" type="number" min="1" value={{data.maxStarRating}}>
                     </div>
                 </div>
 
